# b2broker-test-task

./: Dockerfile  docker-compose.yml  pyproject.toml
b2broker/app/: models.py  serializers.py  urls.py  views.py
b2broker/app/migrations/: 0001_initial.py
b2broker/b2broker/: settings.py  urls.py
